# blueak-session-manager

./: AGENTS.md  Cargo.toml
.github/workflows/: build.yml
src/: app_launch.rs  ipc.rs  main.rs  restore.rs  save.rs  session.rs
systemd/: blueak-session-restore.service  blueak-session-save.service
