[package]
name = "blueak-session-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blueak-session-manager"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
niri-ipc = "=25.5.1"
toml = "0.8"
xdg = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["process", "signal"] }
chrono = { version = "0.4", features = ["serde"] }